@@ -150,6 +150,8 @@ sub _setConf
     $self->_writeHttpdConfFile();
     $self->_writeStartupFile();
     $self->_writeCSSFiles();
+    $self->_reportAdminPort();
+
 }
 
 sub _enforceServiceState
@@ -240,6 +242,20 @@ sub _writeCSSFiles
     }
 }
 
+# Report the new TCP admin port to Zentyal Cloud
+sub _reportAdminPort
+{
+    my ($self) = @_;
+
+    my $global = EBox::Global->getInstance(1);
+    if ($global->modExists('remoteservices')) {
+        my $rs = $global->modInstance('remoteservices');
+        if ( $rs->can('reportAdminPort') ) {
+            $rs->reportAdminPort($self->port());
+        }
+    }
+
+}
 
 sub _httpdConfFile
 {
@@ -300,8 +316,9 @@ sub setPort # (port)
         }
     }
 
-    if (EBox::Global->instance()->modExists('services')) {
-        my $services = EBox::Global->modInstance('services');
+    my $global = EBox::Global->getInstance();
+    if ($global->modExists('services')) {
+        my $services = $global->modInstance('services');
         $services->setAdministrationPort($port);
     }
 
